# homelab-server-manager

./: .gitignore  Cargo.toml  Trunk.toml  config.json  flake.nix  index.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yaml  pr-preview-build.yml  pr-preview-deploy.yml  publish.yaml
assets/: initializer.mjs
common/: Cargo.toml
common/src/: discord.rs  factorio.rs  generic.rs  lib.rs  secret.rs  status.rs  user.rs
frontend/: Cargo.toml  index.html  package-lock.json  package.json
frontend/src/: example.rs  main.rs
frontend/src/app/: about.rs  mod.rs  state.rs  user_actions.rs
frontend/src/components/: mod.rs  nav_link.rs  status.rs
frontend/src/components/status/: health_indicator.rs
frontend/src/pages/: mod.rs
frontend/src/pages/games/: factorio.rs  mod.rs
models/: Cargo.toml
models/src/: lib.rs
nix/: module.nix  packages.nix
server/: Cargo.toml
server/src/: lib.rs  main.rs  servers.rs
server/src/auth/: mod.rs
server/src/routes/: api.rs  mod.rs
server/src/routes/api/: mod.rs  servers.rs
server/src/routes/auth/: discord.rs  mod.rs
server/src/servers/: config.rs  factorio.rs  generic.rs
src/app/: mod.rs
src/components/card/: card.1.example
src/components/table/: table.6.example
src/components/tree/: tree.1.example
src/layouts/bullseye/: mod.rs
