[workspace]
resolver = "2"
members = [
    "frontend",
    "models",
    "server"
]

[workspace.package]
version = "0.1.0"

[workspace.metadata.crane]
name = "homelab-server-manager"

[workspace.dependencies]
serde = "1"
serde_json = "1"

# release profile settings to reduce the final binary size
[profile.release]
lto = true

[profile.release.package.frontend]
codegen-units = 1
opt-level = 's'
