[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
readme = "../README.md"

[dependencies]
models.path = "../models"

serde.workspace = true
serde_json.workspace = true

browser-panic-hook = "0.2"
chrono = { version = "0.4.30", default-features = false, features = ["wasmbind"] }
gloo-utils = "0.2"
log = "0.4"
patternfly-yew = { version = "0.6.1", features = ["tree", "icons-fab"] }
popper-rs = { version = "0.3.2", features = ["yew", "debug"] }
strum = { version = "0.26", features = ["derive"] }
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-more-hooks = { version = "0.3.3", features = ["yew-hooks"] }
yew-nested-router = "0.7.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "HtmlInputElement",
    "MediaQueryList"
]

# release profile settings to reduce the final binary size
#[profile.release]
#panic = 'abort'
#codegen-units = 1
#opt-level = 's'
#lto = true
