[package]
name = "frontend"
edition = "2024"
readme = "../README.md"

[dependencies]
common.path = "../common"

serde.workspace = true
serde_json.workspace = true

browser-panic-hook = "0.2"
gloo-net = "0.6.0"
gloo-utils = "0.2"
log = "0.4"
patternfly-yew = { version = "0.6.3", features = ["tree", "icons-fab"] }
wasm-bindgen = "=0.2.100" # Must match version in nixpkgs
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.4" # Needed for yew 0.21
yew-router = "0.18.0"
yewdux = "0.11.0"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlElement", "HtmlInputElement", "MediaQueryList", "Clipboard"]
