[package]
name = "server"
edition = "2021"

[dependencies]
models.path = "../models"

serde.workspace = true
serde_json.workspace = true

actix-web = "4"
once_cell = "1.20.3"
oauth2 = "5.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = ["model", "rustls_backend"]