[package]
name = "server"
edition = "2021"

[dependencies]
common.path = "../common"

serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true

once_cell = "1.20.3"
oauth2 = { version = "5.0.0", features = ["reqwest"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.95"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
futures = "0.3.31"
http = "1.2.0"
headers = "0.4.0"
moka = { version = "0.12.10", features = ["future"] }
notify = "8.0.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
reqwest = { version = "0.12.12", features = ["json"] }